[metadata]
name = sangfor-api-client
version = 0.0.1
author = Ergün Elvan Bilsel
author_email = bilselergun@gmail.com
description = Sangfor SCP Open-API için bir istemci kütüphanesi (Cilbir Edition)
long_description = file: README.md
long_description_content_type = text/markdown
url = [https://github.com/kullanici-adiniz/sangfor-api-client](https://github.com/kullanici-adiniz/sangfor-api-client)
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests
    urllib3